UI: fix too long websites that are put on another line

--- a/media/items.less
+++ b/media/items.less
@@ -210,10 +210,10 @@
       margin-left: 10px;
 
       > .url {
-        margin-left: 5px;
+        padding-left: 5px;
         color: #a6a6a6;
         font-size: 12px;
-        display: inline-block;
+        display: -webkit-box;
         height: 16px;
         vertical-align: middle;
       }
@@ -463,10 +463,10 @@
             margin-left: 10px;
 
             > .url {
-              margin-left: 5px;
+              padding-left: 5px;
               color: #333;
               font-size: 12px;
-              display: inline-block;
+              display: -webkit-box;
               height: 16px;
               vertical-align: middle;
             }
